# Hw28.2

./: README.md  pyproject.toml
ads/: admin.py  models.py
ads/migrations/: 0002_location_alter_category_options_ad_category_ad_image_and_more.py  0003_remove_ad_address.py  0004_alter_ad_options_alter_ad_name.py  0005_alter_category_id.py
ads/views/: ads.py  category.py  service.py  users.py
avito/: settings.py  urls.py
